@@ -1,3 +1,8 @@
+2010-11-10  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* openvassd/attack.c (attack_network): Remove stray log message. Don't
+	try to add target to the arglist if they are not set.
+
 2010-11-09  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* VERSION: Updated from 3.1.2.SVN to 3.2.0.SVN.
